#AM_CPPFLAGS = $(all_includes) @PACKAGE_CFLAGS@

#noinst_PROGRAMS = test-result


#test_result_SOURCES = \
#    unit_test.c \
#    test-headers.h \
#    t_time_test.c \
#    tdsp_test.c \
#    ../transfer-heap.c          ../transfer-heap.h \
#    ../transfer-time.c          ../transfer-time.h \
#    ../link-capacity-path.c     ../link-capacity-path.h \
#    ../../skr-utils.c           ../../skr-utils.h \
#    ../../sgpsdp/sgp4sdp4.c     ../../sgpsdp/sgp4sdp4.h \
#    ../../calc-dist-two-sat.c   ../../calc-dist-two-sat.h \
#    ../../sgpsdp/sgp_math.c \
#    ../../sgpsdp/sgp_time.c 

#test_result_LDADD = @PACKAGE_LIBS@